Fix overflow in tasks

--- a/css/style.css
+++ b/css/style.css
@@ -51,6 +51,7 @@ body {
 .right {
   width: 100%;
   padding: 0 100px;
+  overflow: auto;
 }
 
 /* sidebar */
